// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates a atom with a primitive value 1`] = `
{
  "actions": undefined,
  "get": 5,
  "getSerialized": "5",
  "self": {
    "actions": undefined,
    "focus": [Function],
    "map": [Function],
    "set": [Function],
    "subscribe": [Function],
    "update": [Function],
    "value": 5,
    "watch": [Function],
    Symbol(): {
      "atom": [Circular],
      "get": [Function],
      "isStream": false,
      "listeners": Set {},
      "set": [Function],
      "subscribe": [Function],
    },
  },
  "selfSerialized": "{"value":5}",
}
`;

exports[`creates a atom with a record 1`] = `
{
  "actions": undefined,
  "get": {
    "alpha": 3,
    "beta": 5,
  },
  "getSerialized": "{"alpha":3,"beta":5}",
  "self": {
    "actions": undefined,
    "focus": [Function],
    "map": [Function],
    "set": [Function],
    "subscribe": [Function],
    "update": [Function],
    "value": {
      "alpha": 3,
      "beta": 5,
    },
    "watch": [Function],
    Symbol(): {
      "atom": [Circular],
      "get": [Function],
      "isStream": false,
      "listeners": Set {},
      "set": [Function],
      "subscribe": [Function],
    },
  },
  "selfSerialized": "{"value":{"alpha":3,"beta":5}}",
}
`;

exports[`normalizes nested atoms in a record 1`] = `
{
  "actions": undefined,
  "get": {
    "alpha": {
      "actions": undefined,
      "focus": [Function],
      "map": [Function],
      "set": [Function],
      "subscribe": [Function],
      "update": [Function],
      "value": 3,
      "watch": [Function],
      Symbol(): {
        "atom": [Circular],
        "get": [Function],
        "isStream": false,
        "listeners": Set {},
        "set": [Function],
        "subscribe": [Function],
      },
    },
    "beta": {
      "actions": undefined,
      "focus": [Function],
      "map": [Function],
      "set": [Function],
      "subscribe": [Function],
      "update": [Function],
      "value": 5,
      "watch": [Function],
      Symbol(): {
        "atom": [Circular],
        "get": [Function],
        "isStream": false,
        "listeners": Set {},
        "set": [Function],
        "subscribe": [Function],
      },
    },
  },
  "getSerialized": "{"alpha":{"value":3},"beta":{"value":5}}",
  "self": {
    "actions": undefined,
    "focus": [Function],
    "map": [Function],
    "set": [Function],
    "subscribe": [Function],
    "update": [Function],
    "value": {
      "alpha": {
        "actions": undefined,
        "focus": [Function],
        "map": [Function],
        "set": [Function],
        "subscribe": [Function],
        "update": [Function],
        "value": 3,
        "watch": [Function],
        Symbol(): {
          "atom": [Circular],
          "get": [Function],
          "isStream": false,
          "listeners": Set {},
          "set": [Function],
          "subscribe": [Function],
        },
      },
      "beta": {
        "actions": undefined,
        "focus": [Function],
        "map": [Function],
        "set": [Function],
        "subscribe": [Function],
        "update": [Function],
        "value": 5,
        "watch": [Function],
        Symbol(): {
          "atom": [Circular],
          "get": [Function],
          "isStream": false,
          "listeners": Set {},
          "set": [Function],
          "subscribe": [Function],
        },
      },
    },
    "watch": [Function],
    Symbol(): {
      "atom": [Circular],
      "get": [Function],
      "isStream": false,
      "listeners": Set {},
      "set": [Function],
      "subscribe": [Function],
    },
  },
  "selfSerialized": "{"value":{"alpha":{"value":3},"beta":{"value":5}}}",
}
`;
